--- a/LoggerUnitTest/LoggerUnitTest.csproj
+++ b/LoggerUnitTest/LoggerUnitTest.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\Logger\Logger.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
